fixed mistakes in my code.