@@ -1,13 +1,12 @@
 package com.example.cryptocurrencies.service.impl;
 
-import com.example.cryptocurrencies.dto.Dto;
+import com.example.cryptocurrencies.dto.CurrencyListDto;
 import com.example.cryptocurrencies.dto.PriceDto;
 import com.example.cryptocurrencies.repository.CurrencyRepository;
 import com.example.cryptocurrencies.service.ExportService;
 import java.io.IOException;
 import java.io.Writer;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.csv.CSVFormat;
@@ -21,14 +20,14 @@ public class ExportServiceImpl implements ExportService {
     private final CurrencyRepository currencyRepository;
 
     @Override
-    public void writePriceToCsv(Writer writer, Dto dto) {
-        List<PriceDto> collect = dto.getName().stream().map(n -> creatFromRepository(n))
-                .collect(Collectors.toList());
+    public void writePriceToCsv(Writer writer, CurrencyListDto dto) {
+        List<PriceDto> collect = dto.getName().stream().map(this::creatFromRepository)
+                .toList();
 
         try (CSVPrinter csvPrinter = new CSVPrinter(writer, CSVFormat.DEFAULT)) {
-            for (int i = 0; i < collect.size(); i++) {
-                csvPrinter.printRecord(collect.get(i).getName(),
-                        collect.get(i).getMinPrice(),collect.get(i).getMaxPrice());
+            for (PriceDto priceDto : collect) {
+                csvPrinter.printRecord(priceDto.getName(),
+                        priceDto.getMinPrice(), priceDto.getMaxPrice());
             }
         } catch (IOException e) {
             log.error("CSVExportServiceImpl: failed to record csv file");
@@ -37,6 +36,11 @@ public class ExportServiceImpl implements ExportService {
     }
 
     private PriceDto creatFromRepository(String name) {
+       if(currencyRepository.findFirstByNameOrderByPriceDesc(name).isEmpty() ||
+          currencyRepository.findFirstByNameOrderByPriceAsc(name).isEmpty()) {
+           throw new RuntimeException("Currency name is invalid or "
+                   + "this currency is not in the database");
+       }
         return PriceDto.builder()
                 .name(name)
                 .minPrice(currencyRepository.findFirstByNameOrderByPriceDesc(name).get().getPrice())
